ZAP-8 Add Zap Manager - inlc initialization.

--- a/contracts/Forc.toml
+++ b/contracts/Forc.toml
@@ -7,6 +7,6 @@ members = [
   # "module04_txidwit",
   # "module05_eip712_simple",
   "master",
-  # "zap_manager",
+  "zap_manager",
   # "tests",
 ]
