ZAP-15 Add module03 - erc/src20 transfers.

--- a/contracts/Forc.toml
+++ b/contracts/Forc.toml
@@ -3,7 +3,7 @@ members = [
   "module00_upgrade",
   "module01_evm_txtype1",
   "module02_evm_txtype2",
-  # "module03_erc20",
+  "module03_erc20",
   # "module04_txidwit",
   # "module05_eip712_simple",
   "master",
