--- a/contracts/module04_txidwit/Forc.toml
+++ b/contracts/module04_txidwit/Forc.toml
@@ -2,10 +2,8 @@
 authors = ["Antony <antony@l3labs.org>"]
 entry = "main.sw"
 license = "Apache-2.0"
-name = "module03_erc20"
+name = "module04_txidwit"
 
 [dependencies]
 zap_utils = { path = "../lib/zap_utils" }
-zapwallet_consts = { path = "../zapwallet_consts" }
-io_utils = { path = "../lib/io_utils" }
 
