ZAP-19 Add Module07 - sponsor.

--- a/contracts/Forc.toml
+++ b/contracts/Forc.toml
@@ -6,6 +6,7 @@ members = [
   "module03_erc20",
   "module04_txidwit",
   # "module05_eip712_simple",
+  "module07_sponsor",
   "master",
   "zap_manager",
   # "tests",
